--- a/docs/asciidoc/front_matter.adoc
+++ b/docs/asciidoc/front_matter.adoc
@@ -23,7 +23,7 @@ Each implementation of DRS can choose its own id scheme, as long as it follows t
 * DRS IDs can contain other characters, but they MUST be encoded into valid DRS IDs whenever they are used in API calls.  This is because non-encoded IDs may interfere with the interpretation of the `objects/{id}/access` endpoint.  To overcome this limitation use percent-encoding of the ID, see https://tools.ietf.org/html/rfc3986#section-2.4[RFC 3986 § 2.4]
 * One DRS ID MUST always return the same object data (or, in the case of a collection, the same set of objects). This constraint aids with reproducibility.
 * DRS implementations MAY have more than one ID that maps to the same object.
-* DRS version 1.x does NOT support semantics around multiple versions of an object. (For example, there’s no notion of “get latest version” or “list all versions”.) Individual implementation MAY choose an ID scheme that includes version hints.
+* DRS version 1.x does NOT support semantics around multiple versions of an object. (For example, there’s no notion of “get latest version” or “list all versions”.) Individual implementations MAY choose an ID scheme that includes version hints.
 
 
 === DRS URIs
@@ -40,7 +40,7 @@ Hostname-based DRS URIs are simpler than compact identifier-based URIs.  They co
 
     drs://<hostname>/<id>
 
-DRS URIs of this form mean “you can fetch the content with DRS id <id> from the DRS server at <hostname> ".
+DRS URIs of this form mean _"you can fetch the content with DRS id <id> from the DRS server at <hostname>"_.
 For example, here are the client resolution steps if the URI is:
 
     drs://drs.example.org/314159
