--- a/docs/asciidoc/front_matter.adoc
+++ b/docs/asciidoc/front_matter.adoc
@@ -104,7 +104,7 @@ DRS servers can choose to issue either hostname-based or compact identifier-base
 
 |Client Efficiency
 |URIs require minimal client logic, and no network requests, to resolve.
-|Citation practice is consistent with publisher instructions. URIs require small client logic, and 1-2 cacheable network requests, to resolve.
+|URIs require small client logic, and 1-2 cacheable network requests, to resolve.  Citation practice is consistent with publisher instructions. 
 
 |Security
 |Servers have full control over their own security practices.
